--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<!-- 此处显示对话历史记录 -->
 		</div>
 		<div style="border: 1px solid;">
-			<p id="status"><!-- 此处显示与服务器的连接状态等信息 --></p>
+			<p id="status">输入房间号和您的昵称即可加入聊天！</p>
 		</div>
 		<div id="control">
 			<p>
@@ -19,8 +19,8 @@
 				<a>昵称</a><input id="nickname" type="text" />
 			</p>
 			<p>
-				<a>消息</a><input id="message" type="text" />
-				<button id="submit" onclick="onClickSubmitButton()">发送消息</button>
+				<a>消息</a><input id="message" type="text"  disabled="true" />
+				<button id="submit" onclick="onClickSubmitButton()">加入房间</button>
 			</p>
 		</div>
 	</body>
